--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3764,7 +3764,7 @@ IRIs that translate to URLs when applying the algorithm for mapping IRIs to URIs
 identified by a certain IRI \should be \emph{located} at the corresponding URL, so that agents can 
 locate them.  As IRIs are specified with a concrete syntax only in \nisref{IETF/RFC 3987:2005}, DOL 
 adopts the latter into its abstract syntax as well as all of its concrete syntaxes 
-(serializations)
+(serializations).
 %\CLnote[type=q-all]{I meant to say: for IRIs, the abstract syntax is the same as 
 %the concrete syntax.}.
 
@@ -6905,7 +6905,7 @@ A \emph{class/data type net} $\Sigma = ((C, {\leq_C}), P, O, A, M)$
 comprises a class/data type hierarchy $(C, {\leq_C})$ and a set $P$ of
 attribute declarations, a set $O$ of operation declarations,
  a set $A$ of association declarations over
-$(C, {\leq_C})$, and a set $M$ of composition declarations, such that
+$(C, {\leq_C})$, and a set $M$ of composition declarations over $(C, {\leq_C})$, such that
 the following properties are satisfied:
 %
 \begin{itemize}[label={--}, leftmargin=*]
@@ -6920,7 +6920,11 @@ declarations in $M \cup A$, then $d_1 \neq d_2$;
 
   \item member end names are unique: if $p_1, \ldots, p_r$ are the
 member end names of an association declaration in $A$ or a composition
-declaration in $M$, then $p_i \neq p_j$ for $1 \leq i \neq j \leq r$.
+declaration in $M$, then $p_i \neq p_j$ for $1 \leq i \neq j \leq r$;\footnote{In UML, member end names need not
+  be unique.  However, for (1)~a simpler handling of selecting a
+  particular member end in the sentences and avoiding the use of
+  number selectors, and (2)~making the notion of member ends ``owned''
+  by a class/data type, we add this constraint.}
 
   \item the type of a member end\footnote{All member ends are instances
   of \uml{Property}; UML Superstructure Specification 2.4.1, p.~36.}
@@ -6936,17 +6940,17 @@ single attribute with name $p_i$ may exist.)
 \end{itemize}
 
 A \emph{class/data type net morphism}
-$\sigma = (\gamma, \pi, \rho, \alpha, \mu) : \Sigma = ((C, {\leq}_C),
-P, O, A, M) \to \Tau = ((D, {\leq}_D), \allowbreak Q, R, B, N)$
-is given by
+$\sigma = (\gamma, \varphi, \alpha, \mu) : \Sigma = ((C,
+{\leq}_C), P, A, M) \to \Tau = ((D, {\leq}_D),\allowbreak
+Q,\allowbreak B, N)$ is given by
 %
 \begin{itemize}[label={--}, leftmargin=*]
   \item a class/data type hierarchy map $\gamma : (C, {\leq_C}) \to (D,
 {\leq_D})$;
 
-  \item an attribute declaration map $\pi : P \to Q$ such that if
-$\pi({c.p : \tau[c']}) = {d.q : \tau'[d']} \in Q$, then $d = \gamma(c)$,
-$d' = \gamma(c')$, and $\tau = \tau'$;
+  \item an attribute declaration map $\varphi : P \to Q$ such that if
+$\varphi({c.p : \tau[c']}) = {d.q : \tau'[d']} \in Q$, then
+$d = \gamma(c)$, $d' = \gamma(c')$, and $\tau = \tau'$;
 
   \item a query operation declaration map $\rho : O \to R$ such that if
 $\rho(c.o(x_1 : \tau_1[c_1], \dots, x_r : \tau_n[c_r]) : \tau[c']) =
@@ -7529,6 +7533,55 @@ $C^\I = \left\{m \in M'_{\Thing} \lvert M' + \{x \mapsto m \} \models \alpha_x (
 
 \sclause{$\OWL \rightarrow \CL$}
 
+
+\section{Queries}
+
+\paragraph
+Let $(C, {\leq_C})$ be a class/data type hierarchy.
+A \emph{query declaration} over $(C, {\leq_C})$ is of the form
+$c.q(f_1 : \tau[c_1], \ldots, f_k : \tau[c_k]) : \tau'[c']$ with
+$c, c' \in C$, $\tau_1, \ldots, \tau_k, \tau'$ collection type
+constructors, $q$ a \emph{query name}, and $f_1, \ldots, f_k$
+\emph{parameter names}.\footnote{We disregard parameter direction
+  kinds with the exception of \uml{return}.  However, we consider
+  \uml{return} parameters to be anonymous; in UML, only a single
+  \uml{return} parameter is allowed.}
+
+A \emph{class/data type net} $\Sigma = ((C, {\leq_C}), Q)$
+comprises a class/data type hierarchy $(C, {\leq_C})$ and a set $Q$ of query declarations
+over $(C, {\leq_C})$, such that the following property is
+satisfied:
+%
+\begin{itemize}[label={--}, leftmargin=*]
+  \item query names are unique along the generalisation
+relation:\footnote{In particular, we disregard overloading and
+  refinement of queries in sub-classes.} if
+$c_1.q_1(f_{11} : \tau_{11}[c_{11}], \ldots, f_{1k_1} :
+\tau_{1k_1}[c_{1k_1}]) : \tau_1'[c_1']$
+and
+$c_2.q_2(f_{21} : \tau_{21}[c_{21}], \ldots, f_{2k_2} :
+\tau_{2k_1}[c_{2k_2}]) : \tau_2'[c_2']$
+are different query declarations in $Q$ and $c_1 \leq_C c_2$, then
+$q_1 \neq q_2$.
+\end{itemize}
+
+A \emph{class/data type net morphism}
+$\sigma = (\gamma, \pi) : \Sigma = ((C, {\leq}_C),
+ Q) \to \Tau = ((D, {\leq}_D),\allowbreak R)$
+is given by
+%
+\begin{itemize}[label={--}, leftmargin=*]
+  \item a class/data type hierarchy map $\gamma : (C, {\leq_C}) \to (D,
+{\leq_D})$; and
+
+  \item a query declaration map $\pi : Q \to R$ such that if
+$\pi({c.q(f_1 : \tau_1[c_1], \ldots, f_k : \tau_k[c_k]) : \tau[c']}) =
+{d.r(g_1 : \tau'_1[d_1], \ldots, g_l : \tau'_l[d_l]) : \tau'[d']} \in
+R$,
+then $d = \gamma(c)$, $d' = \gamma(c')$, $k = l$,
+$d_1 = \gamma(c_1), \ldots, d_k = \gamma(d_k)$,
+$\tau_1 = \tau_1', \ldots, \tau_k = \tau_k'$, and $\tau = \tau'$;
+\end{itemize}
 
 \infannex{Extended Logic Graph}\label{a:ext-graph}
 
@@ -8476,7 +8529,7 @@ straight-forward coding of the additional features not present in
 
 \ssclause{$\SimpleRDF\rightarrow \FOL^{=}$}
 
-The subinstitution comorphism from \SimpleRDF to $\FOL^{=}$ maps a a \SimpleRDF
+The subinstitution comorphism from \SimpleRDF to $\FOL^{=}$ maps a \SimpleRDF
 signature $\mathbf{R_s}$ to the $\FOL^{=}$ signature
 $\Phi(\mathbf{R_s})$ which has $\mathbf{R_s}$ as set of constants, and
 moreover is equipped with a unary predicate $P$ and a ternary
