ednote for default translations

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5149,7 +5149,8 @@ The semantics of a translation $O'= \syntax{translation, OMS, Translation}$ is g
  \item $\Mod(O') = \{M \in \Mod(\Sigma') \,|\, \beta_\Sigma(M\forget\sigma)\in \Mod(\syntax{OMS})\}$
  \item $\Th(O') = \{   Sen^J(\sigma)(\alpha_\Sigma(\delta))  \mid \delta \in \Th(\syntax{OMS}) \}$. It is defined only if \syntax{OMS} is flattenable.
 \end{itemize}
-
+\ednote{if only the target logic is given, the default translation should
+be looked up in the logic graph.}
 %Reduction
 
 The semantics of a reduction
