omit subject fields

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -470,7 +470,7 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand{\nisref}[1]{#1}
 
 
-\renewcommand{\subjectfield}[1]{#1}
+\renewcommand{\subjectfield}[1]{} % {#1}
 %\renewcommand{\bref}[1]{#1}
 
 \newcommand{\normannex}[1]{ \chapter{Annex (normative): #1} }
